--- a/package.json
+++ b/package.json
@@ -28,12 +28,12 @@
     "@nomiclabs/hardhat-waffle": "^2.0.3",
     "@primitivefi/hardhat-dodoc": "^0.2.3",
     "@types/chai": "^4.3.1",
-    "@types/mocha": "^9.1.0",
+    "@types/mocha": "^9.1.1",
     "@types/node": "^17.0.24",
     "chai": "^4.3.6",
     "dotenv": "^16.0.0",
     "ethereum-waffle": "^3.4.4",
-    "ethers": "^5.6.4",
+    "ethers": "5.6.1",
     "hardhat": "^2.9.3",
     "husky": ">=6",
     "lint-staged": ">=10",
