--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "dotenv": "^16.0.0",
     "ethereum-waffle": "^3.4.4",
     "ethers": "5.6.1",
+    "evm-bn": "^1.1.1",
     "hardhat": "^2.9.3",
     "husky": ">=6",
     "lint-staged": ">=10",
