--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,6 +16,6 @@
   "ts-node": {
     "files": true
   },
-  "include": ["./test", "./lib/*", "./scripts", "./types", "./typechain-types"],
+  "include": ["./test/*", "./lib/*", "./scripts", "./types", "./typechain-types"],
   "files": ["./hardhat.config.ts"]
 }
