clean(libraries): updates imports of libraries to audited rmm libs

--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "*.{js,css,md}": "prettier --write"
   },
   "dependencies": {
+    "@primitivefi/rmm-core": "^1.0.0",
     "@typechain/ethers-v5": "^10.0.0",
     "@typechain/hardhat": "^6.0.0",
     "typechain": "^8.0.0"
