--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,12 +10,12 @@
     "noImplicitAny": false,
     "baseUrl": ".",
     "paths": {
-      "@/lib/*": ["lib/*"]
+      "@/lib/*": ["lib/**"]
     }
   },
   "ts-node": {
     "files": true
   },
-  "include": ["./test/*", "./lib/*", "./scripts", "./types", "./typechain-types"],
+  "include": ["test", "lib", "./scripts", "./types", "typechain-types"],
   "files": ["./hardhat.config.ts"]
 }
