test(temp): need to really simplify tests

--- a/foundry.toml
+++ b/foundry.toml
@@ -3,7 +3,7 @@ via_ir = true
 src = 'contracts'
 out = 'out'
 libs = ['lib', 'node_modules']
-test = 'test/foundry'
+test = 'test/'
 remappings = [
     'ds-test=lib/ds-test/src/',
     'forge-std=lib/forge-std/src/',
@@ -22,7 +22,7 @@ out = 'optimized-out'
 [test]
 solc = '0.8.13'
 via_ir = false
-src = 'test/foundry'
+src = 'test/'
 gas_reports = ["*"]
 ffi = true
 fuzz_runs = 500
