--- a/package.json
+++ b/package.json
@@ -29,18 +29,17 @@
   },
   "homepage": "https://github.com/primitivefinance/hyper#readme",
   "devDependencies": {
+    "@nomicfoundation/hardhat-chai-matchers": "^1.0.3",
     "@nomiclabs/hardhat-ethers": "^2.0.5",
-    "@nomiclabs/hardhat-waffle": "^2.0.3",
     "@primitivefi/hardhat-dodoc": "^0.2.3",
     "@types/chai": "^4.3.1",
     "@types/mocha": "^9.1.1",
     "@types/node": "^17.0.24",
     "chai": "^4.3.6",
     "dotenv": "^16.0.0",
-    "ethereum-waffle": "^3.4.4",
     "ethers": "5.6.1",
     "evm-bn": "^1.1.1",
-    "hardhat": "^2.9.3",
+    "hardhat": "^2.10.2",
     "hardhat-gas-reporter": "^1.0.8",
     "hardhat-tracer": "^1.1.0-rc.5",
     "husky": ">=6",
@@ -60,7 +59,7 @@
   },
   "dependencies": {
     "@primitivefi/rmm-core": "^1.0.0",
-    "@rari-capital/solmate": "^6.4.0",
+    "@rari-capital/solmate": "7.0.0-alpha.3",
     "@typechain/ethers-v5": "^10.0.0",
     "@typechain/hardhat": "^6.0.0",
     "typechain": "^8.0.0"
