--- a/foundry.toml
+++ b/foundry.toml
@@ -1,4 +1,4 @@
-[default]
+[profile.default]
 via_ir = true
 src = 'contracts'
 out = 'out'
@@ -9,17 +9,19 @@ remappings = [
     'forge-std=lib/forge-std/src/',
     'solstat/=lib/solstat/contracts/',
     'contracts/=contracts/',
+    'solmate/=lib/solmate/src/',
+    'lib/=lib/'
 ]
 optimizer_runs = 15000
 fuzz_runs = 256
 fuzz_max_local_rejects = 65536
 fuzz_max_global_rejects = 1024
 
-[optimized]
+[profile.optimized]
 solc = '0.8.13'
 out = 'optimized-out'
 
-[test]
+[profile.test]
 solc = '0.8.13'
 via_ir = false
 src = 'test/'
@@ -27,7 +29,7 @@ gas_reports = ["*"]
 ffi = true
 fuzz_runs = 500
 
-[lite]
+[profile.lite]
 out = 'optimized-out'
 via_ir = false
 fuzz_runs = 1000
