--- a/foundry.toml
+++ b/foundry.toml
@@ -17,6 +17,7 @@ optimizer_runs = 15000
 fuzz_runs = 256
 fuzz_max_local_rejects = 65536
 fuzz_max_global_rejects = 1024
+gas_reports = ["*"]
 
 [profile.optimized]
 solc = '0.8.13'
