--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
   "name": "hyper",
-  "version": "0.0.1",
+  "version": "prototype-v0.0.1",
   "description": "Enigma Virtual Machine processes instructions for interacting with liquidity pools.",
   "scripts": {
     "build": "hardhat compile --config ./hardhat.config.ts",
+    "clean": "hardhat clean && forge clean",
     "test": "TS_NODE_TRANSPILE_ONLY=1 hardhat test --config ./hardhat.config.ts",
     "test:forge": "FOUNDRY_PROFILE=test forge test -vvv",
     "profile": "REPORT_GAS=true hardhat test --config ./hardhat.config.ts",
