--- a/package.json
+++ b/package.json
@@ -48,7 +48,7 @@
     "husky": ">=6",
     "lint-staged": ">=10",
     "prettier": "2.6.2",
-    "prettier-plugin-solidity": "^1.0.0-beta.19",
+    "prettier-plugin-solidity": "^1.0.0",
     "ts-node": "^10.7.0",
     "typescript": "^4.6.3"
   },
@@ -56,7 +56,6 @@
     "node": ">=16.0.0"
   },
   "lint-staged": {
-    "*.sol": "prettier --write",
     "*.js": "prettier --write",
     "*.ts": "prettier --write"
   },
