test(major-refactors): improves testing suite and coverage

--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "clean": "hardhat clean && forge clean",
     "test": "TS_NODE_TRANSPILE_ONLY=1 hardhat test --config ./hardhat.config.ts",
     "test:forge": "FOUNDRY_PROFILE=test forge test -vvv",
+    "coverage:forge": "FOUNDRY_PROFILE=test forge coverage",
     "profile": "REPORT_GAS=true hardhat test --config ./hardhat.config.ts",
     "coverage": "hardhat coverage --config ./hardhat-coverage.config.ts --solcoverjs ./config/.solcover.js",
     "lint:check": "prettier --check **.sol && prettier --check **.js && prettier --check **.ts && hardhat compile --config ./hardhat.config.ts",
