--- a/foundry.toml
+++ b/foundry.toml
@@ -1,10 +1,10 @@
 [profile.default]
+solc = '0.8.13'
 via_ir = true
 src = 'contracts'
 out = 'artifacts/contracts'
 libs = ['lib', 'node_modules']
 test = 'test/foundry'
-cache_path = 'forge-cache'
 remappings = [
     'ds-test/=lib/solmate/lib/ds-test/src/',
     'forge-std/=lib/forge-std/src/',
@@ -13,6 +13,7 @@ remappings = [
     'contracts/=contracts/',
     'lib/=lib/'
 ]
+cache = false
 optimizer_runs = 15000
 fuzz_runs = 256
 fuzz_max_local_rejects = 65536
@@ -23,21 +24,30 @@ solc = '0.8.13'
 out = 'optimized-out'
 
 [profile.test]
+cache = false
 solc = '0.8.13'
 via_ir = false
 src = 'test/'
 out = 'artifacts/contracts'
-cache_path = 'forge-cache'
 libs = ['lib', 'node_modules']
 gas_reports = ["*"]
 ffi = true
 fuzz_runs = 500
 
 [profile.lite]
+cache = false
 out = 'optimized-out'
 via_ir = false
 fuzz_runs = 1000
 
+[profile.crytic]
+solc = '0.8.13'
+cache = false
+via_ir = false
+libs = ['lib', 'node_modules']
+src = 'test/crytic'
+test = 'test/crytic'
+out = 'out'
 
 [rpc_endpoints]
 primitive = "http://${PRIMITIVE_RPC}:8545"
