test(echidna): echidna setup done

--- a/foundry.toml
+++ b/foundry.toml
@@ -1,10 +1,10 @@
-[profile.default]
-solc = '0.8.13'
-via_ir = true
+[profile.default] # all profiles inherit from this
+solc = '0.8.13' 
 src = 'contracts'
-out = 'artifacts/contracts'
+out = 'out' # default
+test = 'test' # default
 libs = ['lib', 'node_modules']
-test = 'test/foundry'
+cache = false # !important! breaks echidna if cache = true.
 remappings = [
     'ds-test/=lib/solmate/lib/ds-test/src/',
     'forge-std/=lib/forge-std/src/',
@@ -13,41 +13,26 @@ remappings = [
     'contracts/=contracts/',
     'lib/=lib/'
 ]
-cache = false
+
+[profile.optimized] # uses via_ir and optimizer
+via_ir = true
+out = 'optimized-out'
 optimizer_runs = 15000
 fuzz_runs = 256
 fuzz_max_local_rejects = 65536
 fuzz_max_global_rejects = 1024
 
-[profile.optimized]
-solc = '0.8.13'
-out = 'optimized-out'
-
-[profile.test]
-cache = false
-solc = '0.8.13'
-via_ir = false
-src = 'test/'
-out = 'artifacts/contracts'
-libs = ['lib', 'node_modules']
+[profile.test] # does not use optimizer
+src = 'test/' # not default
 gas_reports = ["*"]
 ffi = true
 fuzz_runs = 500
 
-[profile.lite]
-cache = false
-out = 'optimized-out'
-via_ir = false
-fuzz_runs = 1000
-
 [profile.crytic]
-solc = '0.8.13'
-cache = false
 via_ir = false
-libs = ['lib', 'node_modules']
-src = 'test/crytic'
-test = 'test/crytic'
-out = 'out'
+src = 'test/crytic' # not default
+test = 'test/crytic' # not default
+
 
 [rpc_endpoints]
 primitive = "http://${PRIMITIVE_RPC}:8545"
