--- a/package.json
+++ b/package.json
@@ -3,23 +3,25 @@
   "version": "prototype-v0.0.1",
   "description": "Enigma Virtual Machine processes instructions for interacting with liquidity pools.",
   "scripts": {
-    "build": "hardhat compile --config ./hardhat.config.ts",
-    "build:forge": "FOUNDRY_PROFILE=test forge build",
+    "build": "yarn build:forge",
+    "build:hardhat": "hardhat compile --config ./hardhat.config.ts",
+    "build:crytic": "crytic-compile . --compile-force-framework foundry --compile-custom-build='yarn build:forge:crytic --extra-output abi --extra-output userdoc --extra-output devdoc --extra-output evm.methodIdentifiers --force'",
+    "build:forge": "FOUNDRY_PROFILE=optimized forge build",
     "build:forge:crytic": "FOUNDRY_PROFILE=crytic forge build",
-    "build:crytic": "crytic-compile . --config-file='test/crytic/crytic_compile.config.json' --compile-custom-build='yarn build:forge:crytic --extra-output abi --extra-output userdoc --extra-output devdoc --extra-output evm.methodIdentifiers --force'",
-    "clean": "hardhat clean && forge clean",
-    "test": "TS_NODE_TRANSPILE_ONLY=1 hardhat test --config ./hardhat.config.ts",
-    "test:forge": "FOUNDRY_PROFILE=test forge test -vvv",
-    "coverage:forge": "FOUNDRY_PROFILE=test forge coverage",
-    "profile": "REPORT_GAS=true hardhat test --config ./hardhat.config.ts",
-    "coverage": "hardhat coverage --config ./hardhat-coverage.config.ts --solcoverjs ./config/.solcover.js",
+    "clean": "hardhat clean && forge clean && rm -f crytic-export/*",
+    "coverage": "FOUNDRY_PROFILE=test forge coverage",
+    "coverage:hardhat": "hardhat coverage --config ./hardhat-coverage.config.ts --solcoverjs ./config/.solcover.js",
+    "test": "FOUNDRY_PROFILE=test forge test -vvv",
+    "test:hardhat": "TS_NODE_TRANSPILE_ONLY=1 hardhat test --config ./hardhat.config.ts",
+    "test:echidna": "FOUNDRY_PROFILE=crytic echidna-test . --contract Basic --config test/crytic/config.yaml",
+    "profile": "yarn test:forge --report-gas",
+    "profile:hardhat": "REPORT_GAS=true hardhat test --config ./hardhat.config.ts",
     "lint:check": "prettier --check **.sol && prettier --check **.js && prettier --check **.ts && hardhat compile --config ./hardhat.config.ts",
     "lint:fix": "prettier --write **.sol && prettier --write **.js && prettier --write **.ts",
-    "fuzz:capture": "etheno --ganache --ganache-args='--miner.blockGasLimit 20_000_000' -x test/crytic/init.json",
-    "fuzz:test": "echidna-test . --config test/crytic/config.yaml",
     "prepare": "husky install",
-    "generate": "cd ./test/differential/scripts/ && npm run compile && npm run generate",
-    "sync-deps": "forge remappings > remappings.txt",
+    "prepare:remappings": "forge remappings > remappings.txt",
+    "prepare:echidna": "etheno --ganache --ganache-args='--miner.blockGasLimit 20_000_000' -x test/crytic/init.json",
+    "prepare:differential": "cd ./test/differential/scripts/ && npm run compile && npm run generate",
     "deploy": "forge script scripts/Deploy.s.sol:Deploy --rpc-url $PRIMITIVE_RPC --fork-url $FORK_URL --broadcast"
   },
   "repository": {
