--- a/test/crytic/config.yaml
+++ b/test/crytic/config.yaml
@@ -1,9 +1,9 @@
-#corpusDir: 'test/crytic/corpus'
+corpusDir: 'test/crytic/corpus'
 #initialize: 'test/crytic/init.json'
 testMode: assertion
 testLimit: 5000
 timeout: 3600 # 1hr
 codeSize: 0xfffffffffff
 prefix: 'echidna_'
-#cryticArgs: ['--config-file', 'test/crytic/crytic_compile.config.json']
+cryticArgs: ['--config-file', 'test/crytic/crytic_compile.config.json']
 coverage: true
