--- a/test/crytic/config.yaml
+++ b/test/crytic/config.yaml
@@ -1,5 +1,5 @@
 corpusDir: 'test/crytic/corpus'
-#initialize: 'test/crytic/init.json'
+initialize: 'test/crytic/init.json'
 testMode: assertion
 testLimit: 5000
 timeout: 3600 # 1hr
