--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "ethers": "5.6.1",
     "evm-bn": "^1.1.1",
     "hardhat": "^2.10.2",
+    "hardhat-dependency-compiler": "^1.1.3",
     "hardhat-gas-reporter": "^1.0.8",
     "hardhat-preprocessor": "^0.1.5",
     "hardhat-tracer": "^1.1.0-rc.5",
