chore(deps): clears up old things

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -4,7 +4,7 @@ name: test
 
 jobs:
   check:
-    name: Foundry project
+    name: Hyper Tests
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
