--- a/package.json
+++ b/package.json
@@ -5,7 +5,6 @@
   "description": "Enigma Virtual Machine processes instructions for interacting with liquidity pools.",
   "scripts": {
     "build": "yarn build:forge",
-    "build:hardhat": "hardhat compile --config ./hardhat.config.ts",
     "build:crytic": "crytic-compile . --compile-force-framework foundry --compile-custom-build='yarn build:forge:crytic --extra-output abi --extra-output userdoc --extra-output devdoc --extra-output evm.methodIdentifiers --force'",
     "build:forge": "FOUNDRY_PROFILE=optimized forge build",
     "build:forge:crytic": "FOUNDRY_PROFILE=crytic forge build",
@@ -13,19 +12,13 @@
     "coverage": "FOUNDRY_PROFILE=test forge coverage",
     "coverage:report": "FOUNDRY_PROFILE=test forge coverage --report lcov",
     "test": "FOUNDRY_PROFILE=test forge test -vvv",
-    "test:hardhat": "TS_NODE_TRANSPILE_ONLY=1 hardhat test --config ./hardhat.config.ts",
     "test:echidna": "FOUNDRY_PROFILE=crytic echidna-test . --config test/crytic/config.yaml",
-    "profile": "yarn test --gas-report",
-    "profile:hardhat": "REPORT_GAS=true hardhat test --config ./hardhat.config.ts",
-    "lint:check": "prettier --check **.sol && prettier --check **.js && prettier --check **.ts && hardhat compile --config ./hardhat.config.ts",
-    "lint:fix": "prettier --write **.sol && prettier --write **.js && prettier --write **.ts",
+    "lint": "prettier --write **.sol && prettier --write **.ts",
     "prepare": "husky install",
-    "prepare:remappings": "forge remappings > remappings.txt",
     "prepare:echidna": "etheno --ganache --ganache-args='--miner.blockGasLimit 20000000' -x test/crytic/init.json",
     "prepare:echidna:corpus": "yarn test:hardhat --network ganache",
-    "prepare:differential": "cd ./test/differential/scripts/ && npm run compile && npm run generate",
     "deploy": "forge script scripts/Deploy.s.sol:Deploy --rpc-url $PRIMITIVE_RPC --fork-url $FORK_URL --broadcast",
-    "deploy:ganache": "forge script scripts/Deploy.s.sol:Deploy --fork-url http://localhost:8545 --broadcast",
+    "deploy:ganache": "forge script scripts/Deploy.s.sol:Deploy --fork-url http://localhost:8546 --broadcast",
     "print:storage": "forge inspect contracts/Hyper.sol:Hyper storage-layout"
   },
   "repository": {
