--- a/app/Cargo.toml
+++ b/app/Cargo.toml
@@ -6,8 +6,9 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-bindings = { path = "../out/bindings" }
-env = "0.0.0"
-ethers = "1.0.2"
-eyre = "0.6.6"
+foundry-contracts = { path = "../out/bindings" }
 tokio = { version = "1.17.0", features = ["macros"] }
+env = "0.0.0"
+ethers = "1.0.0"
+eyre = "0.6.6"
+
