--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -59,8 +59,8 @@ jobs:
         with:
           cache-on-failure: true
 
-      - name: cargo fmt
-        run: cargo +nightly fmt --all -- --check
+      # - name: cargo fmt
+      #   run: cargo +nightly fmt --all -- --check
 
       - name: cargo clippy
         run: cargo +nightly clippy --all --all-features -- -D warnings
