--- a/package.json
+++ b/package.json
@@ -2,24 +2,14 @@
   "name": "@primitivefi/hyper",
   "license": "AGPL-3.0-only",
   "version": "beta-v0.1.0",
-  "description": "Gas optimized automated market maker.",
+  "description": "Gas optimized replicating market maker.",
   "files": [
     "contracts/**/*.sol"
   ],
   "scripts": {
-    "clean": "hardhat clean && forge clean && rm -f crytic-export/*",
-    "coverage": "FOUNDRY_PROFILE=test forge coverage",
-    "coverage:report": "FOUNDRY_PROFILE=test forge coverage --report lcov",
-    "test": "FOUNDRY_PROFILE=test forge test -vvv",
-    "test:echidna": "FOUNDRY_PROFILE=crytic echidna-test . --config test/crytic/config.yaml",
-    "lint": "prettier --write **.sol && prettier --write **.ts",
-    "prepare": "husky install",
-    "prepare:echidna": "etheno --ganache --ganache-args='--miner.blockGasLimit 20000000' -x test/crytic/init.json",
-    "prepare:echidna:corpus": "yarn test:hardhat --network ganache",
-    "deploy": "forge script scripts/Deploy.s.sol:Deploy --rpc-url $PRIMITIVE_RPC --fork-url $FORK_URL --broadcast",
-    "deploy:ganache": "forge script scripts/Deploy.s.sol:Deploy --fork-url http://localhost:8546 --broadcast",
-    "print:storage": "forge inspect contracts/Hyper.sol:Hyper storage-layout",
-    "plot": "ts-node ./chart/cli.ts"
+    "lcov": "FOUNDRY_PROFILE=test forge coverage --report lcov",
+    "lint": "prettier --write **.sol",
+    "prepare": "husky install"
   },
   "repository": {
     "type": "git",
@@ -31,50 +21,19 @@
     "primitive",
     "forge"
   ],
-  "author": "Primitive™",
+  "author": "primitive",
   "directories": {
     "lib": "lib",
     "test": "test"
   },
-  "devDependencies": {
-    "@nomicfoundation/hardhat-chai-matchers": "^1.0.3",
-    "@nomicfoundation/hardhat-network-helpers": "^1.0.7",
-    "@nomiclabs/hardhat-ethers": "^2.0.5",
-    "@types/chai": "^4.3.1",
-    "@types/mocha": "^9.1.1",
-    "@types/node": "^17.0.24",
-    "chai": "^4.3.6",
-    "dotenv": "^16.0.0",
-    "ethers": "5.6.1",
-    "evm-bn": "^1.1.1",
-    "gaussian": "^1.2.0",
-    "hardhat": "^2.10.2",
-    "hardhat-dependency-compiler": "^1.1.3",
-    "hardhat-preprocessor": "^0.1.5",
-    "hardhat-tracer": "^1.1.0-rc.5",
-    "husky": ">=6",
-    "lint-staged": ">=10",
-    "prettier": "2.6.2",
-    "prettier-plugin-solidity": "^1.0.0",
-    "ts-node": "^10.7.0",
-    "typescript": "^4.6.3",
-    "asciichart": "^1.5.25",
-    "nodeplotlib": "^1.1.2",
-    "reflect-metadata": "^0.1.13",
-    "@nestjs/common": "^9.2.1",
-    "@nestjs/core": "^9.2.1",
-    "@nestjs/serve-static": "^3.0.0",
-    "@nestjs/websockets": "^9.2.1"
-  },
-  "engines": {
-    "node": ">=16.0.0"
-  },
   "lint-staged": {
-    "*.js": "prettier --write",
-    "*.ts": "prettier --write"
+    "**.sol": "prettier --write"
   },
-  "dependencies": {
-    "@rari-capital/solmate": "^7.0.0-alpha.3",
-    "solstat": "^0.0.2-beta"
+  "devDependencies": {
+    "@commitlint/cli": "^17.4.2",
+    "@commitlint/config-conventional": "^17.4.2",
+    "husky": ">=6",
+    "prettier": "2.6.2",
+    "prettier-plugin-solidity": "^1.0.0"
   }
 }
