--- a/.github/workflows/echidna.yaml
+++ b/.github/workflows/echidna.yaml
@@ -15,7 +15,7 @@ jobs:
           cache: 'npm'
 
       - name: Install dependencies
-        run: npm ci
+        run: yarn install --frozen-lockfile
 
       - name: Compile contracts
         run: forge build
