chore(ci): installs forge instead of yarn deps

--- a/.github/workflows/echidna.yaml
+++ b/.github/workflows/echidna.yaml
@@ -14,8 +14,10 @@ jobs:
           node-version: 16
           cache: 'npm'
 
-      - name: Install dependencies
-        run: yarn install --frozen-lockfile
+      - name: Install Foundry
+        uses: foundry-rs/foundry-toolchain@v1
+        with:
+          version: nightly
 
       - name: Compile contracts
         run: forge build
