fix(ci): adds ignore foundry compile to crytic args for ci

--- a/.github/workflows/echidna.yaml
+++ b/.github/workflows/echidna.yaml
@@ -27,3 +27,4 @@ jobs:
           files: .
           contract: EchidnaE2E
           config: E2E.yaml
+          crytic-args: --foundry-ignore-compile
