fix(ci): add install foundry to ci

--- a/.github/workflows/echidna.yaml
+++ b/.github/workflows/echidna.yaml
@@ -14,6 +14,11 @@ jobs:
           node-version: 16
           cache: 'npm'
 
+      - name: Install Foundry
+        uses: foundry-rs/foundry-toolchain@v1
+        with:
+          version: nightly
+
       - name: Compile contracts
         run: forge build
 
