--- a/foundry.toml
+++ b/foundry.toml
@@ -1,5 +1,5 @@
 [profile.default] # all profiles inherit from this
-solc = '0.8.13' 
+solc = '0.8.13'
 src = 'contracts'
 out = 'out' # default
 test = 'test' # default
@@ -8,7 +8,7 @@ cache = false # !important! breaks echidna if cache = true.
 remappings = [
     'forge-std/=lib/forge-std/src/',
     'solmate/=lib/solmate/src/',
-    'solstat/=lib/solstat/src/'
+    'solstat/=lib/solstat/src/',
 ]
 
 [profile.optimized] # uses via_ir and optimizer
@@ -20,7 +20,7 @@ fuzz_max_local_rejects = 65536
 fuzz_max_global_rejects = 1024
 
 [profile.test] # does not use optimizer
-src = 'test/' # not default
+src = 'test/'       # not default
 gas_reports = ["*"]
 ffi = true
 fuzz_runs = 256
@@ -28,7 +28,7 @@ fuzz_runs = 256
 
 [profile.crytic]
 via_ir = false
-src = 'test/crytic' # not default
+src = 'test/crytic'  # not default
 test = 'test/crytic' # not default
 
 
@@ -42,7 +42,7 @@ prod = "${MAINNET_URL}"
 
 [fuzz]
 # The number of fuzz runs for fuzz tests
-runs = 256
+runs = 10_000
 # The maximum number of test case rejections allowed by proptest, to be
 # encountered during usage of `vm.assume` cheatcode. This will be used
 # to set the `max_global_rejects` value in proptest test runner config.
