--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -1,10 +1,10 @@
 on: [push]
 
-name: unit tests (profile=test)
+name: Optimized Build (profile=optimized)
 
 jobs:
   check:
-    name: Forge test (profile=test)
+    name: Forge build (profile=optimized)
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
@@ -17,4 +17,4 @@ jobs:
           version: nightly
 
       - name: Run tests
-        run: FOUNDRY_PROFILE=test forge test --gas-report --match-contract TestRMM01
+        run: FOUNDRY_PROFILE=optimized forge build --sizes
