refactor(jump-processing): simplifies the jump encoding! much better

--- a/foundry.toml
+++ b/foundry.toml
@@ -14,6 +14,7 @@ remappings = [
 [profile.optimized] # uses via_ir and optimizer
 via_ir = true
 optimizer_runs = 0
+optimizer = true
 out = 'optimized-out'
 
 [profile.test] # does not use optimizer
