--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -16,5 +16,8 @@ jobs:
         with:
           version: nightly
 
-      - name: Run tests
-        run: FOUNDRY_PROFILE=test forge test --gas-report --match-contract TestRMM01
+      - name: Run tests RMM01Portfolio
+        run: FOUNDRY_PROFILE=test forge test --gas-report --match-contract RMM01Portfolio
+
+      - name: Run tests RMM02Portfolio
+        run: FOUNDRY_PROFILE=test forge test --gas-report --match-contract RMM02Portfolio
