--- a/package.json
+++ b/package.json
@@ -1,8 +1,11 @@
 {
-  "name": "@primitivefi/portfolio",
+  "name": "@primitivexyz/portfolio",
   "license": "AGPL-3.0-only",
   "version": "v1.1.1-beta",
   "description": "Onchain protocol for low cost portfolio management using automated market making strategies.",
+  "publishConfig": {
+    "access": "public"
+  },
   "files": [
     "contracts/**/*.sol",
     "optimized-out/Portfolio.sol/Portfolio.json",
